Add js for accordion/v.1.11.3

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     "apple-touch-icon">
     <meta content="" name="keywords">
     <meta content="" name="description">
+    <!-- Jquery for accordion script -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <!-- Accordion script -->
+    <script src="js/beta-dap-accordion.js"></script>
 </head>
 
 <body class="beta">
@@ -1990,9 +1994,7 @@
             </div>
         </div>
     </footer>
-    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <!--[if gt IE 7]><i --><script src="js/core"></script><!--<![endif]-->
-    <script src="js/beta-dap-accordion.js"></script>
     <div id="_oldTag_158_"></div><!--[if IE 8]></div><![endif]-->
 </body>
 </html>
