--- a/c30-option2.html
+++ b/c30-option2.html
@@ -242,8 +242,8 @@
                         </div>
 
                         <div id="accordion" class="callout">
-                            <a class="accordion-toggle callout__link callout__link--anchor">If the problem wasn’t fixed or something else is broken</a>
-                            <section id="step1" class="accordion-content">
+                            <div class="accordion-toggle callout__link callout__link--anchor">If the problem wasn’t fixed or something else is broken</div>
+                            <div id="step1" class="accordion-content">
 
                                 <p>You should ask the garage to fix any faults that:</p>
 
@@ -274,7 +274,7 @@
                                 <div class="callout--info callout--border">
                                     <p>You may be able to get your money back through your bank. Contact them and say you want to use the ‘chargeback’ scheme. Many bank staff don’t know about the scheme, so you may need to talk to a manager.</p>
 
-                                    <p>If you paid by credit card and the repair cost more than £100, it may be easier to tell your bank you want to ‘make a section 75 claim’.</p>
+                                    <p>If you paid by credit card and the repair cost more than £100, it may be easier to tell your bank you want to ‘make a div 75 claim’.</p>
                                 </div>
 
                                 <h3>Get help</h3>
@@ -287,12 +287,12 @@
                                 <div class="callout--turquoise"><a class="callout__link" href="#next-steps">Take further action if your negotiations have failed</a>
                                 </div>
 
-                                <a class="accordion-toggle-close">Close</a>
+                                <a class="callout__link accordion-toggle-close">Close</a>
 
-                            </section>
+                            </div>
 
                             <a class="accordion-toggle callout__link callout__link--anchor">If you think you’re being overcharged</a>
-                            <section id="step2" class="accordion-content">
+                            <div id="step2" class="accordion-content">
 
                                 <h3>If you agreed a price before the work was done</h3>
 
@@ -332,11 +332,11 @@
                                 <div class="callout--turquoise"><a class="callout__link" href="#next-steps">Take further action if your negotiations have failed</a>
                                 </div>
 
-                                <a class="accordion-toggle-close">Close</a>
-                            </section>
+                                <a class="callout__link accordion-toggle-close">Close</a>
+                            </div>
 
                             <a class="accordion-toggle callout__link callout__link--anchor">If the garage did work you didn’t ask for</a>
-                            <section id="step3" class="accordion-content">
+                            <div id="step3" class="accordion-content">
 
                                 <p>If you told the garage to do whatever needs to be done to fix the car, then you gave them the right to decide what work to do. You’ll have to pay if the work was necessary and the price is reasonable. Get a second opinion if you think the price isn’t reasonable.</p>
 
@@ -352,11 +352,11 @@
                                 <div class="callout--turquoise"><a class="callout__link" href="#next-steps">Take further action if your negotiations have failed</a>
                                 </div>
 
-                                <a class="accordion-toggle-close">Close</a>
-                            </section>
+                                <a class="callout__link accordion-toggle-close">Close</a>
+                            </div>
 
                             <a class="accordion-toggle callout__link callout__link--anchor">If the repair is taking too long</a>
-                            <section id="step4" class="accordion-content">
+                            <div id="step4" class="accordion-content">
 
                                 <p>You can ask the garage for a courtesy car (this is a car that the garage will give you to use - not all garages will offer this). Keep a record of everything extra you spend on travel - you might need to prove this later on.</p>
 
@@ -390,8 +390,8 @@
                                 <div class="callout--turquoise"><a class="callout__link" href="#next-steps">Take further action if your negotiations have failed</a>
                                 </div>
 
-                                <a class="accordion-toggle-close">Close</a>
-                            </section>
+                                <a class="callout__link accordion-toggle-close">Close</a>
+                            </div>
                         </div>
 
                         <section id="next-steps">
