--- a/option3.html
+++ b/option3.html
@@ -214,51 +214,39 @@
                 <div class="articleContent">
                     <div>
                         <p>Follow these steps before you get building work, renovations or repairs done on your home. They’ll help you save time, money and stress. They’ll also help you avoid problems with builders, decorators or other contractors, eg plumbers and electricians.</p>
-                        <ol>
-                            <li>
-                                <strong>Check if you need permission or approval</strong></br>
-                                Avoid costly penalties by checking if you need building regulations approval for home improvements, planning permission for building work, or permission as a leaseholder.
-                            </li>
-                            <li>
+
+
+      <!--div class="callout">
+        <a class="callout__link">Link one</a>
+        <a class="callout__link">Link two</a>
+        <a class="callout__link">Link three</a>
+      </div-->
+
+                <div class="sticker">
+                    <div class="steps">
+                        <h4>Steps in this guide</h4>
+                        <a class="steps__link"><span class="steps--number">1</span>
+                            <strong>Check if you need permission or approval</strong></br>
+                                Avoid costly penalties by checking if you need building regulations approval for home improvements, planning permission for building work, or permission as a leaseholder.</a>
+                        <a class="steps__link"><span class="steps--number">2</span>
                                 <strong>Find good builders or contractors</strong></br>
-                                Don’t just rely on what it says on contractors’ websites. Get personal recommendations or references and do the proper checks to find someone you can trust to do a good job.
-                            </li>
-                            <li>
+                                Don’t just rely on what it says on contractors’ websites. Get personal recommendations or references and do the proper checks to find someone you can trust to do a good job.</a>
+                        <a class="steps__link"><span class="steps--number">3</span>
                                 <strong>Get quotes before you decide who to use</strong></br>
-                                Check you’re getting a fair price by getting at least 3 quotes before you decide. Get a quote not an estimate - a quote gives you a fixed price, so you know exactly how much you’ll pay.
-                            </li>
-                            <li>
-                                <strong>Check there’s insurance in place</strong></br>
-                                Check the contractor’s insurance to make sure you don’t face big costs if things go wrong. Then check that your home insurance still covers you while the work’s being done.
-                            </li>
-                            <li>
-                                <strong>Get a written contract</strong></br>
-                                Avoid disputes later by getting agreement in writing on details like start and finish dates, tidying up and how you’ll pay.
-                            </li>
-                            <li>
-                                <strong>Be prepared to deal with problems</strong></br>
-                                Speak to contractors as soon as problems come up, and get them to agree to put them right.
-                            </li>
-                        </ol>
-                        <h2>Step 1: Check if you need permission or approval</h2>
-                        <p>You may have to get more than one kind of permission or approval before you go ahead with work on your home.</p>
-                        <p>Always check if you need:</p>
-                        <ul>
-                            <li>building regulations approval - you may need this even for small improvements, eg replacing windows or doors </li>
-                            <li>planning permission - you usually need this to build something new or make a major change, eg an extension</li>
-                        </ul>
-                        <div class="callout">
-                            <p>You don’t have to apply for building regulations approval yourself if you hire a contractor from a ‘competent person scheme’.</p>
-                        </div>
-                        <h3> If you have to get approval or permission</h3>
-                        <p>You may need to hire a surveyor or architect to help you apply for building regulations approval or planning permission. If you’d struggle to pay for this, ask the Chartered Surveyor's Voluntary Scheme for advice about applying.</p>
-                        <h3> If you’re in a conservation area</h3>
-                        <p>You must also check with your local council before doing work on your home if it’s in conservation area.</p>
-                        <h3> If you’re a leaseholder</h3>
-                        <p>Check your lease if you own the leasehold (not the freehold) on your home. You may have to get permission from the freeholder before work starts. If the lease says you can’t make changes, you can still ask the freeholder for permission. You may have to pay some costs.</p>
-                        <div class="callout--warning">
-                            <p>If you don’t get the permission or approval you need, you could be fined, prosecuted or made to pay to put things right.</p>
-                        </div>
+                                    Check you’re getting a fair price by getting at least 3 quotes before you decide. Get a quote not an estimate - a quote gives you a fixed price, so you know exactly how much you’ll pay.</a>
+                        <a class="steps__link"><span class="steps--number">4</span>
+                            <strong>Check there’s insurance in place</strong></br>
+                                Check the contractor’s insurance to make sure you don’t face big costs if things go wrong. Then check that your home insurance still covers you while the work’s being done.</a>
+                        <a class="steps__link"><span class="steps--number">5</span>
+                            <strong>Get a written contract</strong></br>
+                                Avoid disputes later by getting agreement in writing on details like start and finish dates, tidying up and how you’ll pay.</a>
+                        <a class="steps__link"><span class="steps--number">6</span>
+                            <strong>Be prepared to deal with problems</strong></br>
+                                Speak to contractors as soon as problems come up, and get them to agree to put them right.</a>
+                    </div>
+                </div>
+
+
                     </div>
                 </div>
 
@@ -303,14 +291,14 @@
 
             <nav class="side-nav" data-track-zone="side-nav">
                 <div class="sticker">
-                    <div class="steps">
+                    <div class="steps--navigation">
                         <h4>Steps in this guide</h4>
-                        <a class="steps__link"><span class="steps--number">1</span>Link one</a>
-                        <a class="steps__link"><span class="steps--number">2</span>Link one</a>
-                        <a class="steps__link"><span class="steps--number">3</span>Link one</a>
-                        <a class="steps__link"><span class="steps--number">4</span>Link one</a>
-                        <a class="steps__link"><span class="steps--number">5</span>Link one</a>
-                        <a class="steps__link"><span class="steps--number">6</span>Link one</a>
+                        <a class="steps--navigation__link"><span class="steps--navigation--number">1</span>Check if you need permission or approval</a>
+                        <a class="steps--navigation__link"><span class="steps--navigation--number">2</span>Find good builders or contractors</a>
+                        <a class="steps--navigation__link"><span class="steps--navigation--number">3</span>Get quotes before you decide who to use</a>
+                        <a class="steps--navigation__link"><span class="steps--navigation--number">4</span>Check there’s insurance in place</a>
+                        <a class="steps--navigation__link"><span class="steps--navigation--number">5</span>Get a written contract</a>
+                        <a class="steps--navigation__link"><span class="steps--navigation--number">6</span>Be prepared to deal with problems</a>
                     </div>
                 </div>
             </nav>
